new nav & search user

--- a/noty/templates/global/parts/note-dashboard.html
+++ b/noty/templates/global/parts/note-dashboard.html
@@ -1,50 +1,51 @@
 {% csrf_token %}
 
-<div class="cards-container">
-    {% if notes %}
+{% if notes %}
+    <div class="cards-container">
         {% for item in notes %}
-        <div class="card" style="background-color: var(--color{{item.note.color}})" id="note-{{item.note.id}}">
-            <div class="card-body">
-                <div class='user-time-container'>
-                    <h5 class="card-title"><a class="user-anchor-name" href="{% url 'profile' user=item.note.user.username %}">{{item.note.user.username}}</a></h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">{{item.note.date | timesince}}</h6>
-                </div>
-                <p class="card-text">{{item.note.content}}</p>
-                <div class="icons-container">
-                    {% if item.note.private %}
-                        <i class="fa-solid fa-lock star-button" style="color: #000000;"></i>
-                    {% else %}
-                        {% if user.is_authenticated %}
-                            {% if not item.star %}
-                                <button id="note-{{item.note.id}}-stars-button" class="star-button" onclick="star_note({{item.note.id}})">
-                                    <span id="note-{{item.note.id}}-stars">{{item.note.stars}}</span><i class="fa-regular fa-star star"></i>
-                                </button>
-                            {% else %}
-                                <button id="note-{{item.note.id}}-stars-button" class="star-button" onclick="unstar_note({{item.note.id}})">
-                                    <span id="note-{{item.note.id}}-stars">{{item.note.stars}}</span><i class="fa-solid fa-star star"></i>
-                                </button>
-                            {% endif %}
+            <div class="card" style="background-color: var(--color{{item.note.color}})" id="note-{{item.note.id}}">
+                <div class="card-body">
+                    <div class='user-time-container'>
+                        <h5 class="card-title"><a class="user-anchor-name" href="{% url 'profile' user=item.note.user.username %}">{{item.note.user.username}}</a></h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">{{item.note.date | timesince}}</h6>
+                    </div>
+                    <p class="card-text">{{item.note.content}}</p>
+                    <div class="icons-container">
+                        {% if item.note.private %}
+                            <i class="fa-solid fa-lock star-button" style="color: #000000;"></i>
                         {% else %}
-                            <a href="{% url 'login' %}" class='star-button'><span id="note-{{item.note.id}}-stars">{{item.note.stars}}</span><i class="fa-regular fa-star star"></i></a>
+                            {% if user.is_authenticated %}
+                                {% if not item.star %}
+                                    <button id="note-{{item.note.id}}-stars-button" class="star-button" onclick="star_note({{item.note.id}})">
+                                        <span id="note-{{item.note.id}}-stars">{{item.note.stars}}</span><i class="fa-regular fa-star star"></i>
+                                    </button>
+                                {% else %}
+                                    <button id="note-{{item.note.id}}-stars-button" class="star-button" onclick="unstar_note({{item.note.id}})">
+                                        <span id="note-{{item.note.id}}-stars">{{item.note.stars}}</span><i class="fa-solid fa-star star"></i>
+                                    </button>
+                                {% endif %}
+                            {% else %}
+                                <a href="{% url 'login' %}" class='star-button'><span id="note-{{item.note.id}}-stars">{{item.note.stars}}</span><i class="fa-regular fa-star star"></i></a>
+                            {% endif %}
                         {% endif %}
-                    {% endif %}
-                    {% if item.note.user ==  user %}
-                        <button onclick="delete_note({{item.note.id}})" class="star-button"><i class="fa-solid fa-trash"></i></button>
-                    {% endif %}
+                        {% if item.note.user ==  user %}
+                            <button onclick="delete_note({{item.note.id}})" class="star-button"><i class="fa-solid fa-trash"></i></button>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
-    {% else %}
-        <h1>No notes Found!</h1>
-    {% endif %}
-</div>
+    </div>
+    <div class="paginator">
+        {% for pages in paginator.page_range %}
+            <a href="?page={{ pages }}" {% if page.number == pages %}class="actual-page"{% endif %}>{{ pages }}</a>
+        {% endfor %}
+    </div>
 
-<div class="paginator">
-    {% for pages in paginator.page_range %}
-    <a href="?page={{ pages }}" {% if page.number == pages %}class="actual-page"{% endif %}>{{ pages }}</a>
-    {% endfor %}
-</div>
+{% else %}
+    <h1 class="no-notes">No notes Found!</h1>
+{% endif %}
+
 
 
 {% if user.is_authenticated %}
