--- a/noty/templates/global/base-nav.html
+++ b/noty/templates/global/base-nav.html
@@ -7,36 +7,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noty!</title>
   <link rel="stylesheet" href="{% static 'css/nav-bar.css' %}">
-  <script src="{% static 'js/nav-bar.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'css/paginator.css' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   {% block head %}{% endblock head %}
 </head>
 
 <body>
 
   <header>
-    <nav id='menu'>
-      <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-      <ul>
-        <li {% if my_notes_active %}class="active"{% endif %}><a href='{% url "my-notes" %}'>My Notes</a></li>
-        <li {% if home_active %}class="active"{% endif %}><a href='{% url "home" %}'>Feed</a></li>
-        <li {% if following_active %}class="active"{% endif %}><a href='{% url "following" %}'>Following</a></li>
-        {% if request.user.is_authenticated %}
-          <li>
-            <a class='dropdown-arrow' href='{% url "profile" user=user.username %}'>{{user.username}}</a>
-            <ul class='sub-menus'>
-              <li><a href='{% url "profile" user=user.username %}'>Profile</a></li>
-              <li><a href='{% url "exit" %}'>Logout</a></li>
-            </ul>
-          </li>
-        {% else %}
-          <li><a href='{% url "login" %}'>LogIn</a></li>
-        {% endif %}
-      </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">Noty!</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link {% if my_notes_active %}active{% endif %}" href="{% url 'my-notes' %}">My Notes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if home_active %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Feed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if following_active %}active{% endif %}" aria-current="page" href="{% url 'following' %}">Following</a>
+            </li>
+            {% if request.user.is_authenticated %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  {{user.username}}
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url 'profile' user=user.username %}">Profile</a></li>
+                  <li><a class="dropdown-item" href="#">Configuration</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href='{% url "exit" %}'>Logout</a></li>
+                </ul>
+              </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            {% endif %}
+          </ul>
+          <form class="d-flex" role="search" method="GET" action="{% url 'user-search' %}">
+            <input class="form-control me-2" type="search" placeholder="Search user..." aria-label="Search" name="search">
+            <button class="btn btn-outline-success" type="submit">Go</button>
+          </form>
+        </div>
+      </div>
     </nav>
   </header>
 
